cadvisor.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

spec:
  template:
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      serviceAccountName: cadvisor
      containers:
      - name: cadvisor
        image: google/cadvisor:latest
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        volumeMounts:
        - name: disk
          mountPath: /dev/disk
          readOnly: true
        - name: docker
          mountPath: /var/lib/docker
          readOnly: true
        - name: var-run
          mountPath: /var/run
          readOnly: true
        - name: rootfs
          mountPath: /rootfs
          readOnly: true
        - name: sys
          mountPath: /sys
          readOnly: true
      volumes:
      - name: docker
        hostPath:
          path: /var/lib/docker
      - name: var-run
        hostPath:
          path: /var/run
      - name: rootfs
        hostPath:
          path: /
      - name: disk
        hostPath:
          path: /dev/disk
      - name: sys
        hostPath:
          path: /sys
    metadata:
      labels:
        name: cadvisor
  selector:
    matchLabels:
      name: cadvisor

metadata:
  name: cadvisor
  namespace: kube-system
  annotations:
      seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
