poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      restartPolicy: "Always"
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s

        ports:
        - containerPort: 80
