redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: "Always"
      containers:
      - name: redis
        image: redis:4.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.2"
        ports:
        - containerPort: 6379
