result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: "Always"
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s

        ports:
        - containerPort: 80
